force-app/main/default/objects/FSL_Preview__c/FSL_Preview__c.object-meta.xml
<CustomObject>
    <description>FSL Previews</description>
    <label>FSL Preview</label>
    <nameField>
        <label>Preview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL Previews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>