force-app/main/default/objects/FSL_Preview__c/fields/UTC_01_00__c.field-meta.xml
<CustomField>
    <fullName>UTC_01_00__c</fullName>
    <label>UTC 01:00</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>